@@ -12,6 +12,10 @@ Version 1.3.12
  Fixed:
   - Fix parsing of env causing issues with wine kill [BUG-143];
   - Error: wrong or broken XML data. Try again later. [BUG-146];
+  - Fixed a bug where /etc/mtab was not being read and resulted in being unable to unmount iso images.
+  - Fixed a bug where the temporary director for generating icons wasn't being deleted. Refactored this to use QTemporaryDir.
+  - Added workaround for st terminal, similar to konsole.
+  - Added a feature to keep the terminal open when running winetricks so users can see the output.
 
 Version 1.3.11
  Fixed:
